2023-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve check on result from JSON decoding, resolves #12
	* Release version 4.1.1

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Verify compatibility with PHP 8.2
	* Release version 4.1.0

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update example code for service instanciation
	* Verify compatibility with TYPO3 12 LTS
	* Relase version 4.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 4.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 12, resolves #9
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Switch to new connector service registration API, resolves #11
	* Harden JSON decoding error handling, resolves #8

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix passing of headers for TYPO3 9 and 10 (thanks to Florian Rival)
	* Release version 2.4.2

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.4.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new configuration check API, resolves #5
	* Update documentation settings, resolves #6
	* Add new "headers" configuration parameter, resolves #4

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #3
	* Add functional tests